--- a/Vidly/Views/Movies/Random.cshtml
+++ b/Vidly/Views/Movies/Random.cshtml
@@ -1,8 +1,33 @@
-﻿@model Vidly.Models.Movie
+﻿@using Vidly.Models
+@model Vidly.ViewModels.RandomMovieViewModel
 @{
     ViewBag.Title = "Random";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>@Model.Name</h2>
+@*
+    This is a comment
+    on multiple lines
+*@
+@{ 
+    var className = Model.Customers.Count > 0 ? "popular" : null;
+}
+
+<h2 class=@className>@Model.Movie.Name</h2>
+@if (0 == Model.Customers.Count)
+{
+    <p>No one has rented this movie before.</p>
+}
+else
+{
+    <ul>
+        @foreach (var customer in Model.Customers)
+        {
+            <li>@customer.Name</li>
+        }
+    </ul>
+}
+
+
+
 
