--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -33,8 +33,7 @@ else
             @foreach (var customer in Model)
             {
                 <tr>
-                    <td>@Html.ActionLink(customer.Name, "Details", "Customers", new { id = customer.Id }, null)</td>
-                    <td>@customer.MembershipType.MembershipName</td>
+                    <td>@Html.ActionLink(customer.Name, "Edit", "Customers", new { id = customer.Id }, null)</td>
                 </tr>
             }
         </tbody>
