--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -24,18 +24,19 @@ else
 {
     <table class="table table-bordered table-hover">
         <thead>
-            <tr>
-                <th>Customer</th>
-                <th>Discount Rate</th>
-            </tr>
+        <tr>
+            <th>Customer</th>
+            <th>Discount Rate</th>
+        </tr>
         </thead>
         <tbody>
-            @foreach (var customer in Model)
-            {
-                <tr>
-                    <td>@Html.ActionLink(customer.Name, "Edit", "Customers", new { id = customer.Id }, null)</td>
-                </tr>
-            }
+        @foreach (var customer in Model)
+        {
+            <tr>
+                <td>@Html.ActionLink(customer.Name, "Edit", "Customers", new { id = customer.Id }, null)</td>
+                <td>@customer.MembershipType.MembershipName</td>
+            </tr>
+        }
         </tbody>
     </table>
 }
